# predictive-modeling

./: .gitignore  LICENSE  README.md
apps/budget/: main.py  pyproject.toml
apps/budget-app/: app.py  main.py  pyproject.toml
apps/budget-app2/: pyproject.toml
apps/budget/src/: __main__.py  data_loader.py  main.py  payment.py  schemas.py
apps/budget/tests/: test_next_payment_calculator.py
apps/capm/: main.py  stoxx600monthly.xlsx
apps/churn/: assignment.py  helper_functions.py  model.ipynb  pyproject.toml
apps/finance/: pyproject.toml
apps/finance/src/: dataloader.py
apps/house-prices/: describe_data.py  extract_descriptions.py  pyproject.toml  requirements.txt
apps/house-prices/data/: feature_description.txt
apps/house-prices/src/: eval_classifier.py  eval_regression.py  model.py
apps/ml-stocks/: requirements.txt  stock.bat
apps/ml-stocks/source/: analyse.py  api.py  main.py  training.py
apps/ml-stocks/source/purchase_tools/: __init__.py  n_stocks_to_buy.py
apps/ml-stocks/source/stock_model/: __init__.py
apps/ml-stocks/source/stock_model/Class/: DataPair.py  Features.py  Measurement.py  ModelScore.py  PriceType.py  Regression.py  StockPrice.py  StockProcess.py  TrainingData.py  TrainingDataGenerator.py  getFictiveData.py
apps/power-app/: analysis.py  load_data.py  main.py  pyproject.toml
apps/sf-crime-analysis/: README.md  requirements.txt
apps/sf-crime-analysis/notebook/: 1_indledende_analyse.ipynb  2_analyse_kategory_ift_tid.ipynb  3_analyse_district_ift_tid.ipynb  4_time_series.ipynb
apps/tools-app/: main.py  pyproject.toml
apps/tools-app/budget-app/: app.py  pyproject.toml
apps/tools-app/job-app/: main.py
apps/tools-app/power-app/: load_data.py  power-app.py  pyproject.toml
apps/tools-app/power-app/pages/: consumption_patterns.py  monthly_costs.py  overview.py  raw_data.py  weighted_avg_price.py  what_if.py
apps/tools-app/transcribe/: SETUP_SUMMARY.md
apps/tools-app/transport-fradrag/: main.py  vacation_days.json
apps/transcribe/: README.md  main.py  pyproject.toml
apps/weather-data-db/: LICENSE  README.md  analysis-polars.ipynb  analysis.ipynb  main.py  pyproject.toml  requirements.txt
apps/weather-data-db/src/: interfaces.py
apps/weather-data-db/src/enums/: __init__.py
apps/weather-data-db/src/loaders/: dmi_client_wrapper.py
apps/weather-data-db/src/models/: geometry.py  record.py  weatherstation.py
apps/weather-data-db/src/pipelines/: __init__.py
apps/weather-data-db/src/schemas/: __init__.py  powersystem.py  spotprice.py
notebooks/: analysis.ipynb  load_data.py  pyproject.toml
src/budget/: pyproject.toml
src/budget/tests/: test_next_payment_calculator.py
src/budget/wiz/budget/: data_loader.py  payment.py  schemas.py
src/evaluation/: pyproject.toml
src/evaluation/wiz/evaluation/: helpers.py  helpers2.py  metric.py
src/interface/: pyproject.toml
src/interface/wiz/interface/: estimator_interface.py  modeling_interface.py  preproc_interface.py  target_interface.py
src/job_app_backend/: pyproject.toml
src/job_app_backend/wiz/job_app_backend/: __init__.py  skill_llm.py  skill_model.py  train_model.py
src/job_app_backend/wiz/job_app_backend/skill_ner_model/: config.cfg  meta.json
src/job_app_backend/wiz/job_app_backend/skill_ner_model/ner/: model  moves
src/job_app_backend/wiz/job_app_backend/skill_ner_model/vocab/: strings.json
src/post_proc/: pyproject.toml
src/post_proc/wiz/post_proc/: post_proc.py  precision_calibrator.py
src/revolut-calculations/: pyproject.toml
src/revolut-calculations/wiz/revolut-calculations/: engine.py
src/shared/: pyproject.toml
src/shared/estimator/: base.py
src/shared/wiz/shared/: get_model.py
src/shared/wiz/shared/estimator/: __init__.py  base.py  estimator.py  lasso.py  lightgbm.py  linear.py  linear_pytorch.py  neighbors.py  xgboost_model.py
src/shared/wiz/shared/preprocessor/: new_models.py  preprocessor.py
src/shared/wiz/shared/target_transformer/: target_transformer.py
