[tool.poetry]
name = "budget-app"
version = "0.1.0"
description = ""
authors = ["wiz <wilsonzhou92@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
budget = { path = "../../src/budget", develop = true }
python = "^3.13"
streamlit = "^1.42.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
