[tool.poetry]
name = "budget-app"
version = "0.1.0"
description = ""
authors = ["wiz <wilsonzhou92@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
budget = { path = "../../src/budget", develop = true }
python = "^3.13"
streamlit = "^1.42.0"
python-dotenv = "^1.0.1"
watchdog = "^6.0.0"
ipykernel = "^6.29.5"
statsmodels = "^0.14.4"
patsy = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
