[project]
name = "budget-app2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.1",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "budget",
]

[tool.uv.sources]
budget = { path = "../../src/budget" }
