[tool.poetry]
name = "budget"
version = "0.1.0"
description = ""
authors = ["wiz <wilsonzhou92@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.3"
pyarrow = "^18.0.0"
pandas = "^2.2.3"
pydantic = "^2.9.2"
polars = "^1.13.1"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.153.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"