[tool.poetry]
name = "churn"
version = "0.1.0"
description = ""
authors = ["wiz <wilsonzhou92@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
polars = "^1.22.0"
xgboost = "^2.1.4"
ipykernel = "^6.29.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
