[tool.poetry]
name = "house-prices"
version = "0.1.0"
description = ""
authors = ["wiz <wilsonzhou92@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
shared = { path = "../../src/shared", develop = true }
interface = { path = "../../src/interface", develop = true }
python = "^3.13"
pandas = "^2.2.3"
mlflow = "^2.20.2"
toolz = "^1.0.0"
pydantic = "^2.10.6"
streamlit = "^1.42.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
