[project]
name = "power-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.3",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "streamlit>=1.52.1",
]
