[tool.poetry]
name = "evaluation"
version = "0.1.0"
description = ""
authors = ["wiz <wilsonzhou92@gmail.com>"]
readme = "README.md"
packages = [
    { include = "wiz/evaluation" },
]

[tool.poetry.dependencies]
python = "^3.13"
scikit-learn = "^1.6.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
pandas-stubs = "^2.2.3.241009"
types-python-dateutil = "^2.9.0.20241003"
types-requests = "^2.32.0.20241016"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
