[project]
name = "job-app-backend"
version = "0.1.0"
description = "NER-based skill highlighter for job postings"
authors = [{ name = "wiz", email = "wilsonzhou92@gmail.com" }]
requires-python = ">=3.13,<4"
dependencies = [
    "spacy>=3.8,<4",
]

[tool.hatch.build.targets.sdist]
include = ["wiz/job_app_backend"]

[tool.hatch.build.targets.wheel]
include = ["wiz/job_app_backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
