[tool.poetry]
name = "post-proc"
version = "0.1.0"
description = ""
authors = ["wiz <wilsonzhou92@gmail.com>"]
readme = "README.md"
packages = [
    { include = "wiz/post_proc" },
]

[tool.poetry.dependencies]
python = "^3.13"
interface = {path = "../interface"}
shared = {path = "../shared"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
